Add handler: Session Stop
